...
    final textTheme = Theme.of(context).textTheme;
    final isEditing = wm.isEditing;
    final todoEntity = wm.todoEntity;

    return Scaffold(
      appBar: AppBar(
        title: Text(
          isEditing ? AddEditI18n.editTodo : AddEditI18n.addTodo,
        ),
      ),
      body: Form(
        key: _formKey,
        child: Column(
...
                onSaved: (value) => wm.title = value ?? '',
              ),
            ),
            Padding(
              padding: const EdgeInsets.all(16.0),
              child: TextFormField(
                key: const ValueKey('description'),
                initialValue: isEditing ? todoEntity!.description : '',
                maxLines: 10,
                decoration: const InputDecoration(
                  border: OutlineInputBorder(),
                  labelText: AddEditI18n.todoDescriptionLabel,
                ),
...
